@@ -100,6 +100,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 	&lt;input file&gt;filename&lt;/input&gt;...
 	&lt;sensitive&gt;state&lt;/sensitive&gt;
 	&lt;action&gt;activity&lt;/action&gt;...
+	&lt;action signal="type"&gt;activity&lt;/action&gt;...
 	&lt;action type="function"&gt;parameter&lt;/action&gt;...
 	&lt;item&gt;data&lt;/item&gt;...
 &lt;/table&gt;
@@ -137,6 +138,8 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 <tr><td class="wiki"> sensitive </td><td class="wiki"> Sensitive state </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> action </td><td class="wiki"> Execute command on default signal </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> action </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Execute command on signal </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Perform function on signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> action type="<i>function</i>" </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>column0data</i> <code>|</code> <i>column1data</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 </table>
@@ -224,7 +227,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-08-31 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-01 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
